<resources>
    <string name="app_name">Stock Analyzer</string>
    <string name="revenue_growth">Revenue Growth :" "</string>
    <string name="average_free_cash_flow">"Average Free Cash Flow : " "</string>
    <string name="free_cash_flow_growth">Free Cash Flow Growth : " "</string>
    <string name="company_name">Company Name : " "</string>
    <string name="company_industry">Company Industry : " "</string>
    <string name="market_cap">Market Cap : " "</string>
    <string name="p_e_ratio">P/E Ratio : " "</string>
    <string name="share_price">Price : " "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_logo">company logo</string>
    <string name="price_target">Price target : " "</string>
    <string name="past_5_years">Past 5 Years</string>
    <string name="next_5_years_growth">Next 5 Years Growth : " "</string>
    <string name="analysis">Analysis</string>
    <string name="price_target_low">Price Target Low :</string>
    <string name="price_target_median">Price Target Median :</string>
    <string name="price_target_high">Price Target High :</string>
    <string name="Dashes">---</string>
    <string name="profit_margins">Profit Margins :</string>
    <string name="gross_margins">Gross Margins ;</string>
    <string name="return_on_assets">Return On Assets ;</string>
    <string name="net_income_growth">Net Income Growth :</string>
    <string name="number_percent">%1$s</string>
    <string name="dollar"></string>
</resources>