<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Analysis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:alpha="1"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/analysis"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/analysis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pastData" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/companyImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/company_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:alpha="1"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/past_5_years"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pastData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentData" />

    <LinearLayout
        android:id="@+id/topBox"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyImage"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/companyBasics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/company_name"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/companyIndustry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:text="@string/company_industry"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/companyBasicsValues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/companyNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/companyIndustryValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/currentData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBox"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/fieldNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_price"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorLink="@color/colorText" />

            <TextView
                android:id="@+id/marketCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_cap"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorLink="@color/colorText" />

            <TextView
                android:id="@+id/priceToEarninga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_e_ratio"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorLink="@color/colorText" />

            <TextView
                android:id="@+id/profitMargins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profit_margins"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/grossMargins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gross_margins"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/returnOnAssets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_on_assets"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fieldValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/marketCapValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/priceToEarningsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Dashes"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/profitMarginsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/grossMarginsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/returnOnAssetsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pastData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentData">

        <LinearLayout
            android:id="@+id/pastDataFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/revenueGrowth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/revenue_growth"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorLink="@color/colorText" />

            <TextView
                android:id="@+id/netIncomeGrowth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/net_income_growth"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/freeCashFlowGrowth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_cash_flow_growth"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/averageFreeCashFlow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_free_cash_flow"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pastDataValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/revenueGrowthValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/netIncomeGrowthValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/freeCashFlowGrowthValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/averageFreeCashFlowValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/analysis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pastData">

        <LinearLayout
            android:id="@+id/analysisDataFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceTargetLowField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_target_low"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/priceTargetMedianField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_target_median"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/priceTargetHighField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_target_high"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/next5YearsGrowthField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_5_years_growth"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorText"
                android:textColorLink="@color/colorText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nalysisDataValuews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/priceTargetLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/priceTargetMedian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/priceTargetHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/growthAnalysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>